Testing html in node js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    This is a test file.
+    This is a text written in html.
     <script src="app.js"></script>
   </body>
 </html>
