--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-
+<script src="app.js"></script>
   <div class="logo">
     <h1>D.</h1>
   </div>
