Make html and js naming more similar to others

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     This is a text written in html.
-    <script src="app.js"></script>
-  </body>
+    <script src="script.js" charset="utf-8"></script>
+  </body>  
 </html>
