--- a/index.html
+++ b/index.html
@@ -27,41 +27,41 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">1. Little interest or pleasure in doing things</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--1" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--1" name="btn-1" value="not-at-all">
+            <label for="not-at-all--1" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--1" name="btn-1">
               Not at all
             </label>
-            <label for="several-days--1" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--1" name="btn-1" value="several-days">
+            <label for="several-days--1" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--1" name="btn-1">
               Several days
             </label>
-            <label for="more-than-half--1" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--1" name="btn-1" value="more-than-half">
+            <label for="more-than-half--1" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--1" name="btn-1">
               More than half the days
             </label>
-            <label for="nearly-everyday--1" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--1" name="btn-1" value="nearly-everyday">
+            <label for="nearly-everyday--1" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--1" name="btn-1">
               Nearly every day
             </label>
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">2. Feeling down, dedivressed, or hodiveless</h3>
+          <h3 class="quiz-question">2. Feeling down, depressed, or hodiveless</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--2" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--2" name="btn-2" value="not-at-all">
+            <label for="not-at-all--2" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--2" name="btn-2">
               Not at all
             </label>
-            <label for="several-days--2" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--2" name="btn-2" value="several-days">
+            <label for="several-days--2" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--2" name="btn-2">
               Several days
             </label>
-            <label for="more-than-half--2" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--2" name="btn-2" value="more-than-half">
+            <label for="more-than-half--2" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--2" name="btn-2">
               More than half the days
             </label>
-            <label for="nearly-everyday--2" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--2" name="btn-2" value="nearly-everyday">
+            <label for="nearly-everyday--2" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--2" name="btn-2">
               Nearly every day
             </label>
           </div>
@@ -69,20 +69,20 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">3. Trouble falling or staying asleediv, or sleediving too much</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--3" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--3" name="btn-3" value="not-at-all">
+            <label for="not-at-all--3" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--3" name="btn-3">
               Not at all
             </label>
-            <label for="several-days--3" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--3" name="btn-3" value="several-days">
+            <label for="several-days--3" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--3" name="btn-3">
               Several days
             </label>
-            <label for="more-than-half--3" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--3" name="btn-3" value="more-than-half">
+            <label for="more-than-half--3" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--3" name="btn-3">
               More than half the days
             </label>
-            <label for="nearly-everyday--3" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--3" name="btn-3" value="nearly-everyday">
+            <label for="nearly-everyday--3" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--3" name="btn-3">
               Nearly every day
             </label>
           </div>
@@ -90,20 +90,20 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">4. Feeling tired or having little energy</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--4" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--4" name="btn-4" value="not-at-all">
+            <label for="not-at-all--4" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--4" name="btn-4">
               Not at all
             </label>
-            <label for="several-days--4" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--4" name="btn-4" value="several-days">
+            <label for="several-days--4" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--4" name="btn-4">
               Several days
             </label>
-            <label for="more-than-half--4" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--4" name="btn-4" value="more-than-half">
+            <label for="more-than-half--4" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--4" name="btn-4">
               More than half the days
             </label>
-            <label for="nearly-everyday--4" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--4" name="btn-4" value="nearly-everyday">
+            <label for="nearly-everyday--4" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--4" name="btn-4">
               Nearly every day
             </label>
           </div>
@@ -111,20 +111,20 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">5. Poor appetite or overeating</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--5" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--5" name="btn-5" value="not-at-all">
+            <label for="not-at-all--5" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--5" name="btn-5">
               Not at all
             </label>
-            <label for="several-days--5" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--5" name="btn-5" value="several-days">
+            <label for="several-days--5" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--5" name="btn-5">
               Several days
             </label>
-            <label for="more-than-half--5" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--5" name="btn-5" value="more-than-half">
+            <label for="more-than-half--5" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--5" name="btn-5">
               More than half the days
             </label>
-            <label for="nearly-everyday--5" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--5" name="btn-5" value="nearly-everyday">
+            <label for="nearly-everyday--5" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--5" name="btn-5">
               Nearly every day
             </label>
           </div>
@@ -132,19 +132,19 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">6. Feeling bad about yourself - or that you are a failure or have let yourself or your family down</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--6" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--6" name="btn-6" value="not-at-all">
+            <label for="not-at-all--6" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--6" name="btn-6">
               Not at all
             </label>
-            <label for="several-days--6" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--6" name="btn-6" value="several-days">
+            <label for="several-days--6" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--6" name="btn-6">
               Several days</label>
-            <label for="more-than-half--6" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--6" name="btn-6" value="more-than-half">
+            <label for="more-than-half--6" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--6" name="btn-6">
               More than half the days
             </label>
-            <label for="nearly-everyday--6" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--6" name="btn-6" value="nearly-everyday">
+            <label for="nearly-everyday--6" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--6" name="btn-6">
               Nearly every day
             </label>
           </div>
@@ -152,19 +152,19 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">7. Trouble concentrating on things, such as reading the newspaper or watching television</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--7" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--7" name="btn-7" value="not-at-all">
+            <label for="not-at-all--7" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--7" name="btn-7">
               Not at all
             </label>
-            <label for="several-days--7" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--7" name="btn-7" value="several-days">
+            <label for="several-days--7" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--7" name="btn-7">
               Several days</label>
-            <label for="more-than-half--7" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--7" name="btn-7" value="more-than-half">
+            <label for="more-than-half--7" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--7" name="btn-7">
               More than half the days
             </label>
-            <label for="nearly-everyday--7" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--7" name="btn-7" value="nearly-everyday">
+            <label for="nearly-everyday--7" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--7" name="btn-7">
               Nearly every day
             </label>
           </div>
@@ -172,20 +172,20 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">8. Moving or speaking so slowly that other people could have noticed</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--8" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--8" name="btn-8" value="not-at-all">
+            <label for="not-at-all--8" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--8" name="btn-8">
               Not at all
             </label>
-            <label for="several-days--8" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--8" name="btn-8" value="several-days">
+            <label for="several-days--8" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--8" name="btn-8">
               Several days
             </label>
-            <label for="more-than-half--8" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--8" name="btn-8" value="more-than-half">
+            <label for="more-than-half--8" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--8" name="btn-8">
               More than half the days
             </label>
-            <label for="nearly-everyday--8" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--8" name="btn-8" value="nearly-everyday">
+            <label for="nearly-everyday--8" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--8" name="btn-8">
               Nearly every day
             </label>
           </div>
@@ -193,20 +193,20 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">9. Thoughts that you would be better off dead, or of hurting yourself</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--9" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--9" name="btn-9" value="not-at-all">
+            <label for="not-at-all--9" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--9" name="btn-9">
               Not at all
             </label>
-            <label for="several-days--9" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--9" name="btn-9" value="several-days">
+            <label for="several-days--9" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--9" name="btn-9">
               Several days
             </label>
-            <label for="more-than-half--9" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--9" name="btn-9" value="more-than-half">
+            <label for="more-than-half--9" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--9" name="btn-9">
               More than half the days
             </label>
-            <label for="nearly-everyday--9" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--9" name="btn-9" value="nearly-everyday">
+            <label for="nearly-everyday--9" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--9" name="btn-9">
               Nearly every day
             </label>
           </div>
@@ -214,28 +214,31 @@
         <div class="quiz-ctn">
           <h3 class="quiz-question">10. If you've had any days with issues above, how difficult have these problems made it for you at work, home, school, or with other people?</h3>
           <div class="quiz-choices">
-            <label for="not-at-all--10" class="quiz-choice">
-              <input class="input" type="radio" id="not-at-all--10" name="btn-10" value="not-at-all">
+            <label for="not-at-all--10" class="quiz-choice" data-score="1">
+              <input class="input" type="radio" id="not-at-all--10" name="btn-10">
               Not at all
             </label>
-            <label for="several-days--10" class="quiz-choice">
-              <input class="input" type="radio" id="several-days--10" name="btn-10" value="several-days">
+            <label for="several-days--10" class="quiz-choice" data-score="2">
+              <input class="input" type="radio" id="several-days--10" name="btn-10">
               Several days
             </label>
-            <label for="more-than-half--10" class="quiz-choice">
-              <input class="input" type="radio" id="more-than-half--10" name="btn-10" value="more-than-half">
+            <label for="more-than-half--10" class="quiz-choice" data-score="3">
+              <input class="input" type="radio" id="more-than-half--10" name="btn-10">
               More than half the days
             </label>
-            <label for="nearly-everyday--10" class="quiz-choice">
-              <input class="input" type="radio" id="nearly-everyday--10" name="btn-10" value="nearly-everyday">
+            <label for="nearly-everyday--10" class="quiz-choice" data-score="4">
+              <input class="input" type="radio" id="nearly-everyday--10" name="btn-10">
               Nearly every day
             </label>
           </div>
         </div>
+        <form id="result-form" action="result.html">
+          <p class="result-error">&nbsp;</p>
+          <button type="submit" name="button" class="submitBtn">Get result</button>
+        </form>
       </div>
     </section>
   </main>
-
   <script src="script.js" charset="utf-8"></script>
 </body>
 
