change to template literals, arrow functions & fix typos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="quiz-flex">
         <h2 class="quiz-title">Do you have depression?</h2>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">1. Little interest or pleasure in doing things</h3>
+          <h3 class="quiz-question">1. I feel little interest or pleasure in doing things.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--1" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--1" name="btn-1">
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">2. Feeling down, depressed, or hodiveless</h3>
+          <h3 class="quiz-question">2. I'm feeling down and hopeless.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--2" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--2" name="btn-2">
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">3. Trouble falling or staying asleediv, or sleediving too much</h3>
+          <h3 class="quiz-question">3. I have trouble falling asleep or I sleep too much.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--3" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--3" name="btn-3">
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">4. Feeling tired or having little energy</h3>
+          <h3 class="quiz-question">4. I always feel tired or no energy.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--4" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--4" name="btn-4">
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">5. Poor appetite or overeating</h3>
+          <h3 class="quiz-question">5. I don't have appetite or I tend to overeat.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--5" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--5" name="btn-5">
@@ -130,7 +130,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">6. Feeling bad about yourself - or that you are a failure or have let yourself or your family down</h3>
+          <h3 class="quiz-question">6. I feel bad about myself, feeling like a failure and have let everyone down.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--6" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--6" name="btn-6">
@@ -150,7 +150,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">7. Trouble concentrating on things, such as reading the newspaper or watching television</h3>
+          <h3 class="quiz-question">7. I have trouble concentrating.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--7" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--7" name="btn-7">
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">8. Moving or speaking so slowly that other people could have noticed</h3>
+          <h3 class="quiz-question">8. I speak and move so slowly that other people noticed.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--8" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--8" name="btn-8">
@@ -191,7 +191,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">9. Thoughts that you would be better off dead, or of hurting yourself</h3>
+          <h3 class="quiz-question">9. I have thoughts that I would be better off dead, or I hurt myself.</h3>
           <div class="quiz-choices">
             <label for="not-at-all--9" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--9" name="btn-9">
@@ -212,7 +212,7 @@
           </div>
         </div>
         <div class="quiz-ctn">
-          <h3 class="quiz-question">10. If you've had any days with issues above, how difficult have these problems made it for you at work, home, school, or with other people?</h3>
+          <h3 class="quiz-question">10. How difficult have these problems made it for me when I am at work, home, school, or with other people?</h3>
           <div class="quiz-choices">
             <label for="not-at-all--10" class="quiz-choice" data-score="1">
               <input class="input" type="radio" id="not-at-all--10" name="btn-10">
