--- a/result.html
+++ b/result.html
@@ -8,35 +8,35 @@
 </head>
 
 <body>
-  <section class="result-page">
-    <div class="container">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Normal</th>
-            <th>Slightly depressed</th>
-            <th>Depressed</th>
-            <th>Extremely depressed</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>0%-25%</td>
-            <td>26%-50%</td>
-            <td>51%-75%</td>
-            <td>76%-100%</td>
-          </tr>
-        </tbody>
-      </table>
+  <section class="section__result">
+      <div class="flex-ctn">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Normal</th>
+              <th>Slightly depressed</th>
+              <th>Depressed</th>
+              <th>Extremely depressed</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>0%-25%</td>
+              <td>26%-50%</td>
+              <td>51%-75%</td>
+              <td>76%-100%</td>
+            </tr>
+          </tbody>
+        </table>
 
-      <div class="text-ctn">
-        <h3 class="result-txt">Your result</h3>
-        <p class="result-percentage">&nbsp;</p>
+        <div class="result-ctn">
+          <h3 class="result-txt">Your result</h3>
+          <p class="result-percentage">&nbsp;</p>
+        </div>
       </div>
-    </div>
-    <div class="homeBtn-ctn">
-    <a href="index.html" class="homeBtn">Home</a>
-    </div>
+      <div class="homeBtn-ctn">
+        <a href="index.html" class="homeBtn">Home</a>
+      </div>
   </section>
 
   <script src="script.js" charset="utf-8"></script>
