update design, add about us

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <nav class="main-nav">
           <ul class="ul">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="reminder.html">Reminder</a></li>
-            <li><a href="#" class="quiz-btn">Take the quiz</a></li>
+            <li><a href="#section__quiz" class="quiz-btn">Take the quiz</a></li>
           </ul>
         </nav>
         <div class="nav-blobline">&nbsp;</div>
@@ -39,7 +39,7 @@
             <div class="img-blobline--1">&nbsp;</div>
             <div class="img-blob--2">&nbsp;</div>
             <div class="img-blobline--2">&nbsp;</div>
-            <img src="img/toucan.png" class="img--toucan" alt="toucan-img">
+            <img src="image/toucan.png" class="img--toucan" alt="toucan-img">
           </div>
           <div class="text-ctn">
             <h1 class="text__h1">Hello there human! <br /> I am Tuco.
@@ -60,14 +60,15 @@
         <div class="container grid grid-2-columns">
           <div class="quiz-text-ctn">
             <h2 class="quiz-text__h2">Take quiz now!</h2>
-            <p class="quiz-text__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. </p>
+            <p class="quiz-text__p">Depression is very common and a serious illness. It affects your everyday life, the way you feel, the way you think
+              and the way you communicate with others. If you think you are suffering from depression it is better to see an expert. Please take our 2 minute
+              quiz to check if you have depression.</p>
             <a href="#" class="quiz-btn">Take the quiz</a>
             <div class="quiz-text--blob">&nbsp;</div>
             <div class="quiz-text--blobline">&nbsp;</div>
           </div>
           <div class="quiz-img-ctn">
-            <img src="img/quiz-img.png" class="quiz-img" alt="girl">
+            <img src="image/quiz-img.png" class="quiz-img" alt="girl">
             <div class="quiz-img--blob">&nbsp;</div>
             <div class="quiz-img--blobline">&nbsp;</div>
           </div>
@@ -292,6 +293,23 @@
               <p class="result-error">&nbsp;</p>
               <button type="submit" name="button" class="submitBtn">Get result</button>
             </form>
+          </div>
+        </div>
+      </section>
+      <section class="about-us">
+        <div class="container grid grid-2-columns about-gap">
+          <div class="about-text-ctn about-center">
+            <p class="about-us__p">We are the team</p>
+            <h2 class="about-us__h2">Toucans-04</h2>
+          </div>
+          <div class="about-img-ctn">
+            <img src="image/about.png" class="about-img" alt="toucan">
+          </div>
+          <div class="team-ctn grid grid-4-columns about-center">
+            <div class="team"><p class="team-names">Hertanto</p></div>
+            <div class="team"><p class="team-names">BlueDragon</p></div>
+            <div class="team"><p class="team-names">It_is_42</p></div>
+            <div class="team"><p class="team-names">Yushi</p></div>
           </div>
         </div>
       </section>
