--- a/reminder.html
+++ b/reminder.html
@@ -12,8 +12,8 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">About Us</a></li>
-        <li class="nav-item"><a class="nav-link nav-text" href="index.html">Features</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="blog.html">Blog</a></li>
+        <li class="nav-item"><a class="nav-link nav-text" href="#">Reminder</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">Take the quiz</a></li>
       </ul>
     </nav>
