--- a/result.html
+++ b/result.html
@@ -14,9 +14,9 @@
     <nav class="navbar navbar-expand-lg navbar-color p-5 mb-5">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link nav-text" href="#">About Us</a></li>
-        <li class="nav-item"><a class="nav-link nav-text" href="index.html">Features</a></li>
+        <li class="nav-item"><a class="nav-link nav-text" href="index.html">About Us</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="blog.html">Blog</a></li>
+        <li class="nav-item"><a class="nav-link nav-text" href="reminder.html">Reminder</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">Take the quiz</a></li>
       </ul>
     </nav>
