--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="main-nav">
           <ul class="ul">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="reminder.html">Reminder</a></li>
             <li><a href="#section__quiz" class="quiz-btn">Take the quiz</a></li>
@@ -63,7 +63,7 @@
             <p class="quiz-text__p">Depression is very common and a serious illness. It affects your everyday life, the way you feel, the way you think
               and the way you communicate with others. If you think you are suffering from depression it is better to see an expert. Please take our 2 minute
               quiz to check if you have depression.</p>
-            <a href="#" class="quiz-btn">Take the quiz</a>
+            <a class="quiz-btn">Take the quiz</a>
             <div class="quiz-text--blob">&nbsp;</div>
             <div class="quiz-text--blobline">&nbsp;</div>
           </div>
@@ -296,7 +296,7 @@
           </div>
         </div>
       </section>
-      <section class="about-us">
+      <section class="about-us" id="about">
         <div class="container grid grid-2-columns about-gap">
           <div class="about-text-ctn about-center">
             <p class="about-us__p">We are the team</p>
