--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         </nav>
         <div class="nav-blobline">&nbsp;</div>
       </div>
+      <nav class="media-nav">
+        <ul class="ul-2">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="reminder.html">Reminder</a></li>
+          <li><a href="#section__quiz">Take the quiz</a></li>
+        </ul>
+      </nav>
       <div class="main-header">
         <div class="container grid grid-2-columns">
           <div class="img-ctn">
@@ -306,10 +315,18 @@
             <img src="image/about.png" class="about-img" alt="toucan">
           </div>
           <div class="team-ctn grid grid-4-columns about-center">
-            <div class="team"><p class="team-names">Hertanto</p></div>
-            <div class="team"><p class="team-names">BlueDragon</p></div>
-            <div class="team"><p class="team-names">It_is_42</p></div>
-            <div class="team"><p class="team-names">Yushi</p></div>
+            <div class="team">
+              <p class="team-names">Hertanto</p>
+            </div>
+            <div class="team">
+              <p class="team-names">BlueDragon</p>
+            </div>
+            <div class="team">
+              <p class="team-names">It_is_42</p>
+            </div>
+            <div class="team">
+              <p class="team-names">Yushi</p>
+            </div>
           </div>
         </div>
       </section>
