update media queries, site name, fix issues

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="style.css">
   <title></title>
 </head>
-
 <body>
   <div class="page-container">
     <header class="header">
+      <div class="logo"><a href="#">Fight <i class="fas fa-fist-raised fist fa-2x"></i> Depression</a></div>
       <div class="nav-blob">
         <nav class="main-nav">
           <ul class="ul">
@@ -33,6 +33,7 @@
         <div class="nav-blobline">&nbsp;</div>
       </div>
       <nav class="media-nav">
+        <div class="logo-2"><a href="#">Fight <i class="fas fa-fist-raised fa-2x"></i> Depression</a></div>
         <ul class="ul-2">
           <li><a href="#">Home</a></li>
           <li><a href="#about">About Us</a></li>
