--- a/result.html
+++ b/result.html
@@ -10,8 +10,9 @@
 
 <body>
   <div class="page-container">
-    <div class="logo"></div>
     <nav class="navbar navbar-expand-lg navbar-color p-5 mb-5">
+      <div class="logo"><a href="#">Fight <i class="fas fa-fist-raised fist fa-2x"></i> Depression</a></div>
+      <div class="logo-2"><a href="#">Fight <i class="fas fa-fist-raised fa-2x"></i> Depression</a></div>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">About Us</a></li>
